--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -147,7 +147,7 @@ block.jp-Voltatic-burner.description = Burns Voltatic gas to generates power. Mo
 block.jp-acidifier-module.name = [#A865C9]Acidifier Module
 block.jp-acidifier-module.description = Increases Apollyon Assembler tier when placed next to it.
 block.jp-Extractor.name = [#A865C9]Extractor
-block.jp-Extractor.description = A drill only capable of mining certain ores. Mines at a faster pace than normal 2x2 drills.
+block.jp-Extractor.description = A drill only capable of mining certain ores. Mines at a faster pace than non-electric drills.
 block.jp-gestator.name = [#590e14]Gestator
 block.jp-gestator.description = Produces neoplastic units.
 block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt Refinery
@@ -180,16 +180,14 @@ unit.jp-carci.description = Fires long-range artillery at enemy ground targets, 
 unit.jp-autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
 unit.jp-autus.description = Heavily armored zerg, Fires a continuous jet of flame at enemy targets, decreases damage taken while attacking.
 unit.jp-autus.details = Seems to be related to a liquid called "Neoplasm" that only exists on Erekir... Or Erekir is the only planet that we have known with neoplasm.
-unit.jp-Hivedefender.name = [#A865C9]Hive defender
-unit.jp-Hivedefender.description = Defenses the Hive from enemies. Build structures
+unit.jp-Hivedefender.name = [#A865C9]Hatchery defender
+unit.jp-Hivedefender.description = Defends the Hatchery from enemies. Builds structures.
+unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
+unit.jp-HiveSentinel.description = Defends the Hive from enemies. Builds structures.
+unit.jp-Sporophage.name = [#A865C9]Sporophage
+unit.jp-Sporophage.description = Defends the Nydusae from enemies. Builds structures. Have a built-in mini meltdown.
 unit.jp-Zeta.name = [#A865C9]Zeta
 unit.jp-Zeta.description = Wait, the unit is hidden, how are you seeing this?
-unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
-unit.jp-HiveSentinel.description = A Flying Living creature that protect their hive at all cost.
-unit.jp-HiveSentinel.details = There is a record of it killing people, please be careful.
-unit.jp-Sporophage.name = [#A865C9]Sporophage
-unit.jp-Sporophage.description = An advanced Hive defender with a built-in meltdown, very dangerous.
-unit.jp-Sporophage.details = Basically Hive Sentinel II.
 unit.jp-roach.name = [#A865C9]Roach
 unit.jp-roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
 unit.jp-zergling.name = [#A865C9]Zergling
