I HATE CASE INSENSITIVITY

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -171,12 +171,12 @@ unit.jp-Gragoth.name = [#590e14]Gr[#500c12]a[#470b10]g[#3e090e]o[#35080c]th
 unit.jp-Gragoth.description = Shoot piercing orb at enemies.
 unit.jp-Thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
 unit.jp-Thera.description = Flying unit that Launches missile at enemies.
-unit.jp-Imp.name = [#590e14]I[#500c12]m[#470b10]p
-unit.jp-Imp.description = A self-destruct unit that flies off once it attacked or get killed in battle.
-unit.jp-DeathImp.name = [#590e14]Rein[#500c12]car[#470b10]nat[#3e090e]ion
-unit.jp-DeathImp.description = Floating body of the imp, can attack for one more time.
+unit.jp-imp.name = [#590e14]I[#500c12]m[#470b10]p
+unit.jp-imp.description = Crawls toward enemy targets and self-destructs, deal extra damage to buildings.
+unit.jp-impReincranation.name = [#590e14]Rein[#500c12]car[#470b10]nat[#3e090e]ion
+unit.jp-impReincranation.description = It\u0027s sac exploded, yet it is somehow still alive...\nFly to enemy targets and self-destructs. Everything in it\u0027s path will be set ablaze.
 unit.jp-carci.name = [#590e14]C[#500c12]a[#470b10]r[#3e090e]c[#35080c]i
-unit.jp-carci.description = Fires long-range artillery at enemy ground targets, bypasses wall.
+unit.jp-carci.description = Fires long-range artillery at enemy ground targets, ignores wall.
 unit.jp-autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
 unit.jp-autus.description = Heavily armored zerg, Fires a continuous jet of flame at enemy targets, decreases damage taken while attacking.
 unit.jp-autus.details = Seems to be related to a liquid called "Neoplasm" that only exists on Erekir... Or Erekir is the only planet that we have known with neoplasm.
@@ -184,8 +184,8 @@ unit.jp-Hivedefender.name = [#A865C9]Hatchery defender
 unit.jp-Hivedefender.description = Defends the Hatchery from enemies. Builds structures.
 unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
 unit.jp-HiveSentinel.description = Defends the Hive from enemies. Builds structures.
-unit.jp-Sporophage.name = [#A865C9]Sporophage
-unit.jp-Sporophage.description = Defends the Nydusae from enemies. Builds structures. Have a built-in mini meltdown.
+unit.jp-sporophage.name = [#A865C9]sporophage
+unit.jp-sporophage.description = Defends the Nydusae from enemies. Builds structures. Have a built-in mini meltdown.
 unit.jp-Zeta.name = [#A865C9]Zeta
 unit.jp-Zeta.description = Wait, the unit is hidden, how are you seeing this?
 unit.jp-roach.name = [#A865C9]Roach
@@ -199,8 +199,8 @@ unit.jp-Interceptor.name = [#A865C9]Interceptor
 unit.jp-Interceptor.description = A small plane that capable of distract nearby enemy.
 unit.jp-Guardian.name = [#A865C9]Guardian
 unit.jp-Guardian.description = A long range Zerg that capable of sniping small enemies.
-unit.jp-Breacher.name = [#A865C9]Breacher
-unit.jp-Breacher.description = A machine of destruction, capable of destroy everything stand in its path.
+unit.jp-breacher.name = [#A865C9]breacher
+unit.jp-breacher.description = A machine of destruction, capable of destroy everything stand in its path.
 unit.jp-Drone.name = [#A865C9]Drone
 unit.jp-Drone.description = A flying drone that collect resources and won\u0027t fight back when attacked, [grey]Unless controlled by player.
 unit.jp-Drone.details = The first zerg ever created (and no, larva doesn\u0027t count), made to working for the swarm and sometime even fight.
@@ -217,8 +217,8 @@ unit.jp-Rizomorph.description = A flying zerg that shoots exploding spore seed.
 unit.jp-Purger.name = [#A865C9]Purger
 unit.jp-Purger.description = Fires a continuous jet of flame at enemy targets.
 unit.jp-Purger.details = Peace is not an option but Arson is.
-unit.jp-Basilisk.name = [#A865C9]Basilisk
-unit.jp-Basilisk.description = A slow walking artillery unit. Fires large electric cluster-shells at enemy targets. Knocks enemy targets back with 4 autonomous minigun turret.
+unit.jp-basilisk.name = [#A865C9]basilisk
+unit.jp-basilisk.description = A slow walking artillery unit. Fires large electric cluster-shells at enemy targets. Knocks enemy targets back with 4 autonomous minigun turret.
 unit.jp-Harvester.name = [#A865C9]Harvester
 unit.jp-Harvester.description = Harvest things, unlike drone it cannot defend itself.
 unit.jp-Bomb.name = [#A865C9]Missiles
