--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -186,8 +186,8 @@ unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
 unit.jp-HiveSentinel.description = Defends the Hive from enemies. Builds structures.
 unit.jp-sporophage.name = [#A865C9]sporophage
 unit.jp-sporophage.description = Defends the Nydusae from enemies. Builds structures. Have a built-in mini meltdown.
-unit.jp-Zeta.name = [#A865C9]Zeta
-unit.jp-Zeta.description = Wait, the unit is hidden, how are you seeing this?
+unit.jp-zeta.name = [#A865C9]zeta
+unit.jp-zeta.description = Wait, the unit is hidden, how are you seeing this?
 unit.jp-roach.name = [#A865C9]Roach
 unit.jp-roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
 unit.jp-zergling.name = [#A865C9]Zergling
