super idol de xiao rong

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -182,8 +182,8 @@ unit.jp-autus.description = Heavily armored zerg, Fires a continuous jet of flam
 unit.jp-autus.details = Seems to be related to a liquid called "Neoplasm" that only exists on Erekir... Or Erekir is the only planet that we have known with neoplasm.
 unit.jp-Hivedefender.name = [#A865C9]Hatchery defender
 unit.jp-Hivedefender.description = Defends the Hatchery from enemies. Builds structures.
-unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
-unit.jp-HiveSentinel.description = Defends the Hive from enemies. Builds structures.
+unit.jp-hiveSentinel.name = [#A865C9]Hive Sentinel
+unit.jp-hiveSentinel.description = Defends the Hive from enemies. Builds structures.
 unit.jp-sporophage.name = [#A865C9]sporophage
 unit.jp-sporophage.description = Defends the Nydusae from enemies. Builds structures. Have a built-in mini meltdown.
 unit.jp-zeta.name = [#A865C9]zeta
