I still HATES case insensitivity

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -83,8 +83,8 @@ block.jp-neostabilizer.description = Stores neoplasm into a cell for later uses.
 block.jp-Nydusaecore.details = Seriously what do you expect from it, it\u0027s just a bigger core
 block.jp-Nanoprocessor.name = [#A865C9]Biomass Processor
 block.jp-Nanoprocessor.description = Processes Spore Pod into Biomass.
-block.jp-Harvester_bay.name = [#A865C9]Harvester bay
-block.jp-Harvester_bay.description = Create a single harvest that collect resources.
+block.jp-harvester_bay.name = [#A865C9]harvester bay
+block.jp-harvester_bay.description = Create a single harvest that collect resources.
 block.jp-apollyonAssembler.name = [#A865C9]Apollyon Assmbler
 block.jp-apollyonAssembler.description = Create BIG units.
 block.jp-Naniteinfuser.name = [#A865C9]Nanite Infuser
@@ -116,7 +116,7 @@ block.jp-Mitocannon.name = [#A865C9]Mitocannon
 block.jp-Mitocannon.description = Fires high-speed electric bullet. Super effective at destroying large number of weak units. Require constant supply of water to operate.
 block.jp-pool.name = [#A865C9]Incubator
 block.jp-pool.description = Produces small ground zerg unit.
-block.jp-pool.details = Purger may or may not be overpowered.
+block.jp-pool.details = purger may or may not be overpowered.
 block.jp-assembler.name = [#A865C9]Assembler
 block.jp-assembler.description = Produces big zerg unit, both ground and air included.
 block.jp-assembler.details = May or may not be balanced.
@@ -167,8 +167,8 @@ unit.jp-Slasher.name = [#590e14]Sl[#500c12]a[#470b10]s[#3e090e]h[#35080c]er
 unit.jp-Slasher.description = Launchs missiles that deals heavy area damage.
 unit.jp-protectorate.name = [#590e14]Pr[#500c12]ote[#470b10]cto[#3e090e]ra[#35080c]te
 unit.jp-protectorate.description = Armored air unit that buffs and heal nearby allies. Fires a stream of low damage bullet at enemies.
-unit.jp-Gragoth.name = [#590e14]Gr[#500c12]a[#470b10]g[#3e090e]o[#35080c]th
-unit.jp-Gragoth.description = Shoot piercing orb at enemies.
+unit.jp-gragoth.name = [#590e14]Gr[#500c12]a[#470b10]g[#3e090e]o[#35080c]th
+unit.jp-gragoth.description = Shoot piercing orb at enemies.
 unit.jp-thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
 unit.jp-thera.description = Flying unit that Launches missile at enemies.
 unit.jp-imp.name = [#590e14]I[#500c12]m[#470b10]p
@@ -180,8 +180,8 @@ unit.jp-carci.description = Fires long-range artillery at enemy ground targets, 
 unit.jp-autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
 unit.jp-autus.description = Heavily armored zerg, Fires a continuous jet of flame at enemy targets, decreases damage taken while attacking.
 unit.jp-autus.details = Seems to be related to a liquid called "Neoplasm" that only exists on Erekir... Or Erekir is the only planet that we have known with neoplasm.
-unit.jp-Hivedefender.name = [#A865C9]Hatchery defender
-unit.jp-Hivedefender.description = Defends the Hatchery from enemies. Builds structures.
+unit.jp-hiveDefender.name = [#A865C9]Hatchery defender
+unit.jp-hiveDefender.description = Defends the Hatchery from enemies. Builds structures.
 unit.jp-hiveSentinel.name = [#A865C9]Hive Sentinel
 unit.jp-hiveSentinel.description = Defends the Hive from enemies. Builds structures.
 unit.jp-sporophage.name = [#A865C9]sporophage
@@ -214,20 +214,20 @@ unit.jp-Scarabid.description = A walking long range spider that have area damage
 unit.jp-Scarabid.details = A walking ripple.
 unit.jp-Rizomorph.name = [#A865C9]Rizomorph
 unit.jp-Rizomorph.description = A flying zerg that shoots exploding spore seed.
-unit.jp-Purger.name = [#A865C9]Purger
-unit.jp-Purger.description = Fires a continuous jet of flame at enemy targets.
-unit.jp-Purger.details = Peace is not an option but Arson is.
+unit.jp-purger.name = [#A865C9]purger
+unit.jp-purger.description = Fires a continuous jet of flame at enemy targets.
+unit.jp-purger.details = Peace is not an option but Arson is.
 unit.jp-basilisk.name = [#A865C9]basilisk
 unit.jp-basilisk.description = A slow walking artillery unit. Fires large electric cluster-shells at enemy targets. Knocks enemy targets back with 4 autonomous minigun turret.
-unit.jp-Harvester.name = [#A865C9]Harvester
-unit.jp-Harvester.description = Harvest things, unlike drone it cannot defend itself.
+unit.jp-harvester.name = [#A865C9]harvester
+unit.jp-harvester.description = Harvest things, unlike drone it cannot defend itself.
 unit.jp-Bomb.name = [#A865C9]Missiles
 unit.jp-Bomb.description = Once again, why and how are you reading this.
-unit.jp-Lobber.name = [#A865C9]Lobber
-unit.jp-Lobber.description = A small swarmy units created by behomoth to annoy enemies and drain their ammo [#f0]Don't underestimate those little guys.
-unit.jp-Gorgon.name = [#A865C9]Gorgon
-unit.jp-Gorgon.description = Fires a massive continuous laser at enemies. may cause arson.
-unit.jp-Gorgon.details = It\u0027s a walking battleship from the hit game starcocaine 2
+unit.jp-lobber.name = [#A865C9]lobber
+unit.jp-lobber.description = A small swarmy units created by behomoth to annoy enemies and drain their ammo [#f0]Don't underestimate those little guys.
+unit.jp-gorgon.name = [#A865C9]gorgon
+unit.jp-gorgon.description = Fires a massive continuous laser at enemies. may cause arson.
+unit.jp-gorgon.details = It\u0027s a walking battleship from the hit game starcocaine 2
 unit.jp-frost.name = [#23dbde]Fr[#23c0de]ost
 unit.jp-frost.description = Evolved autus that can tolerate the harsh cold of the mountains, this creature live on the coldest area of the planet, isolate themselves from the rest of the swarm.
 unit.jp-frostC.name = [#23dbde]Fr[#23c0de]ost
