--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -197,8 +197,8 @@ unit.jp-raptor.name = [#A865C9]Raptor
 unit.jp-raptor.description = Elite zergling, better, faster, stronger, and they even have wings!
 unit.jp-interceptor.name = [#A865C9]interceptor
 unit.jp-interceptor.description = A small plane that capable of distract nearby enemy.
-unit.jp-Guardian.name = [#A865C9]Guardian
-unit.jp-Guardian.description = A long range Zerg that capable of sniping small enemies.
+unit.jp-guardian.name = [#A865C9]guardian
+unit.jp-guardian.description = A long range Zerg that capable of sniping small enemies.
 unit.jp-breacher.name = [#A865C9]breacher
 unit.jp-breacher.description = A machine of destruction, capable of destroy everything stand in its path.
 unit.jp-drone.name = [#A865C9]drone
@@ -209,11 +209,11 @@ unit.jp-baneling.description = A suicide fighter, Deal heavy damage upon death.
 unit.jp-behomoth.name = [#A865C9]behomoth
 unit.jp-behomoth.description = A [#f0]GIANT [white]behomoth.
 unit.jp-behomoth.details = The lobber may or may not be op depending on the enemy crowd control.
-unit.jp-Scarabid.name = [#A865C9]Scarabid
-unit.jp-Scarabid.description = A walking long range spider that have area damage and long range, perfect for mid-game combat, too bad it cant hit air.
-unit.jp-Scarabid.details = A walking ripple.
-unit.jp-Rizomorph.name = [#A865C9]Rizomorph
-unit.jp-Rizomorph.description = A flying zerg that shoots exploding spore seed.
+unit.jp-scarabid.name = [#A865C9]scarabid
+unit.jp-scarabid.description = A walking long range spider that have area damage and long range, perfect for mid-game combat, too bad it cant hit air.
+unit.jp-scarabid.details = A walking ripple.
+unit.jp-rizomorph.name = [#A865C9]rizomorph
+unit.jp-rizomorph.description = A flying zerg that shoots exploding spore seed.
 unit.jp-purger.name = [#A865C9]purger
 unit.jp-purger.description = Fires a continuous jet of flame at enemy targets.
 unit.jp-purger.details = Peace is not an option but Arson is.
