--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -234,26 +234,26 @@ unit.jp-frostC.name = [#23dbde]Fr[#23c0de]ost
 unit.jp-frostC.description = ...?
 #end units
 #sectors
-sector.jp-Ski.name = Above the skies
-sector.jp-Ski.description = An old, heavily infected power storage of the crux, recently we have detected some strange object falling into our planet, this is one of the sector with those strange object. Eradicate all opposition and conduct further research.
-sector.jp-SkiHM.name = Above the skies
-sector.jp-SkiHM.description = An old, heavily infected power storage of the crux, recently we have detected some strange object falling into our planet, this is one of the sector with those strange object. Eradicate all opposition and conduct further research.
-sector.jp-Biomass.name = Biomass Synthesis Facility
-sector.jp-Biomass.description = The origin of spores... On Serpulo at least. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility\u0027s demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
-sector.jp-BiomassHM.name = Biomass Synthesis Facility
-sector.jp-BiomassHM.description = The origin of spores... On Serpulo at least. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility\u0027s demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
-sector.jp-Dig.name = Dig site
-sector.jp-Dig.description = One of our many mining sites, reduced to ruins after the great war, normally we won\u0027t care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
-sector.jp-DigHM.name = Dig site
-sector.jp-DigHM.description = One of our many mining sites, reduced to ruins after the great war, normally we won\u0027t care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
-sector.jp-Birth.name = Birth
-sector.jp-Birth.description = Sightings of Actual Alien base have been detected on this sector, we have must eradicate them before they completely overrun the sector. Becareful and try to not wake them up too early, make sure that your attack eradicate the core.
-sector.jp-BirthHM.name = Birth
-sector.jp-BirthHM.description = Sightings of Actual Alien base have been detected on this sector, we have must eradicate them before they completely overrun the sector. Becareful and try to not wake them up too early, make sure that your attack eradicate the core.
-sector.jp-Magma.name = Magma
-sector.jp-Magma.description = A new type of ore have been detected in this sector, investigate and eradicate.
-sector.jp-MagmaHM.name = Magma
-sector.jp-MagmaHM.description = A new type of ore have been detected in this sector, investigate and eradicate.
+sector.jp-ski.name = Above the skies
+sector.jp-ski.description = An old, heavily infected power storage of the crux, recently we have detected some strange object falling into our planet, this is one of the sector with those strange object. Eradicate all opposition and conduct further research.
+sector.jp-skiHM.name = Above the skies
+sector.jp-skiHM.description = An old, heavily infected power storage of the crux, recently we have detected some strange object falling into our planet, this is one of the sector with those strange object. Eradicate all opposition and conduct further research.
+sector.jp-biomass.name = Biomass Synthesis Facility
+sector.jp-biomass.description = The origin of spores... On Serpulo at least. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility\u0027s demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
+sector.jp-biomassHM.name = Biomass Synthesis Facility
+sector.jp-biomassHM.description = The origin of spores... On Serpulo at least. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility\u0027s demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
+sector.jp-dig.name = Dig site
+sector.jp-dig.description = One of our many mining sites, reduced to ruins after the great war, normally we won\u0027t care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
+sector.jp-digHM.name = Dig site
+sector.jp-digHM.description = One of our many mining sites, reduced to ruins after the great war, normally we won\u0027t care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
+sector.jp-birth.name = Birth
+sector.jp-birth.description = Sightings of Actual Alien base have been detected on this sector, we have must eradicate them before they completely overrun the sector. Becareful and try to not wake them up too early, make sure that your attack eradicate the core.
+sector.jp-birthHM.name = Birth
+sector.jp-birthHM.description = Sightings of Actual Alien base have been detected on this sector, we have must eradicate them before they completely overrun the sector. Becareful and try to not wake them up too early, make sure that your attack eradicate the core.
+sector.jp-magma.name = Magma
+sector.jp-magma.description = A new type of ore have been detected in this sector, investigate and eradicate.
+sector.jp-magmaHM.name = Magma
+sector.jp-magmaHM.description = A new type of ore have been detected in this sector, investigate and eradicate.
 sector.jp-frost.name = Frosted
 sector.jp-frost.description = One of the tier 5 unit production sector, with barebone defenses. After the alien invasion, this place have become a resting place for one of the alien, frost.
 sector.jp-FrostHM.name = Frosted
