--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -83,8 +83,8 @@ block.jp-neostabilizer.description = Stores neoplasm into a cell for later uses.
 block.jp-Nydusaecore.details = Seriously what do you expect from it, it\u0027s just a bigger core
 block.jp-Nanoprocessor.name = [#A865C9]Biomass Processor
 block.jp-Nanoprocessor.description = Processes Spore Pod into Biomass.
-block.jp-harvester_bay.name = [#A865C9]harvester bay
-block.jp-harvester_bay.description = Create a single harvest that collect resources.
+block.jp-harvesterBay.name = [#A865C9]harvester bay
+block.jp-harvesterBay.description = Create a single harvest that collect resources.
 block.jp-apollyonAssembler.name = [#A865C9]Apollyon Assmbler
 block.jp-apollyonAssembler.description = Create BIG units.
 block.jp-Naniteinfuser.name = [#A865C9]Nanite Infuser
