--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -184,9 +184,9 @@ unit.jp-hiveDefender.name = [#A865C9]Hatchery defender
 unit.jp-hiveDefender.description = Defends the Hatchery from enemies. Builds structures.
 unit.jp-hiveSentinel.name = [#A865C9]Hive Sentinel
 unit.jp-hiveSentinel.description = Defends the Hive from enemies. Builds structures.
-unit.jp-sporophage.name = [#A865C9]sporophage
+unit.jp-sporophage.name = [#A865C9]Sporophage
 unit.jp-sporophage.description = Defends the Nydusae from enemies. Builds structures. Have a built-in mini meltdown.
-unit.jp-zeta.name = [#A865C9]zeta
+unit.jp-zeta.name = [#A865C9]Zeta
 unit.jp-zeta.description = Wait, the unit is hidden, how are you seeing this?
 unit.jp-roach.name = [#A865C9]Roach
 unit.jp-roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
@@ -197,35 +197,35 @@ unit.jp-raptor.name = [#A865C9]Raptor
 unit.jp-raptor.description = Elite zergling, better, faster, stronger, and they even have wings!
 unit.jp-interceptor.name = [#A865C9]interceptor
 unit.jp-interceptor.description = A small plane that capable of distract nearby enemy.
-unit.jp-guardian.name = [#A865C9]guardian
+unit.jp-guardian.name = [#A865C9]Guardian
 unit.jp-guardian.description = A long range Zerg that capable of sniping small enemies.
-unit.jp-breacher.name = [#A865C9]breacher
+unit.jp-breacher.name = [#A865C9]Breacher
 unit.jp-breacher.description = A machine of destruction, capable of destroy everything stand in its path.
-unit.jp-drone.name = [#A865C9]drone
+unit.jp-drone.name = [#A865C9]Drone
 unit.jp-drone.description = A flying drone that collect resources and won\u0027t fight back when attacked, [grey]Unless controlled by player.
 unit.jp-drone.details = The first zerg ever created (and no, larva doesn\u0027t count), made to working for the swarm and sometime even fight.
 unit.jp-baneling.name = [#A865C9]Baneling
 unit.jp-baneling.description = A suicide fighter, Deal heavy damage upon death.
-unit.jp-behomoth.name = [#A865C9]behomoth
-unit.jp-behomoth.description = A [#f0]GIANT [white]behomoth.
-unit.jp-behomoth.details = The lobber may or may not be op depending on the enemy crowd control.
-unit.jp-scarabid.name = [#A865C9]scarabid
-unit.jp-scarabid.description = A walking long range spider that have area damage and long range, perfect for mid-game combat, too bad it cant hit air.
+unit.jp-behomoth.name = [#A865C9]Behomoth
+unit.jp-behomoth.description = Fires a barrage of bullets at enemy targets. Occasionally spawns Lobbers to support it\u0027s attack.
+unit.jp-behomoth.details = It is unknown how those semi-biological creature can produce "children" at an insane rate or how they\u0027re made.
+unit.jp-scarabid.name = [#A865C9]Scarabid
+unit.jp-scarabid.description = Fires long range artillery at enemy ground targets with varying degree of accuracy.
 unit.jp-scarabid.details = A walking ripple.
-unit.jp-rizomorph.name = [#A865C9]rizomorph
+unit.jp-rizomorph.name = [#A865C9]Rizomorph
 unit.jp-rizomorph.description = A flying zerg that shoots exploding spore seed.
-unit.jp-purger.name = [#A865C9]purger
+unit.jp-purger.name = [#A865C9]Purger
 unit.jp-purger.description = Fires a continuous jet of flame at enemy targets.
 unit.jp-purger.details = Peace is not an option but Arson is.
-unit.jp-basilisk.name = [#A865C9]basilisk
+unit.jp-basilisk.name = [#A865C9]Basilisk
 unit.jp-basilisk.description = A slow walking artillery unit. Fires large electric cluster-shells at enemy targets. Knocks enemy targets back with 4 autonomous minigun turret.
-unit.jp-harvester.name = [#A865C9]harvester
+unit.jp-harvester.name = [#A865C9]Harvester
 unit.jp-harvester.description = Harvest things, unlike drone it cannot defend itself.
 unit.jp-Bomb.name = [#A865C9]Missiles
 unit.jp-Bomb.description = Once again, why and how are you reading this.
-unit.jp-lobber.name = [#A865C9]lobber
+unit.jp-lobber.name = [#A865C9]Lobber
 unit.jp-lobber.description = A small swarmy units created by behomoth to annoy enemies and drain their ammo [#f0]Don't underestimate those little guys.
-unit.jp-gorgon.name = [#A865C9]gorgon
+unit.jp-gorgon.name = [#A865C9]Gorgon
 unit.jp-gorgon.description = Fires a massive continuous laser at enemies. may cause arson.
 unit.jp-gorgon.details = It\u0027s a walking battleship from the hit game starcocaine 2
 unit.jp-frost.name = [#23dbde]Fr[#23c0de]ost
